User registration complete

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -16,6 +16,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="register.html">Register</a></li>
                     <li><a href="#login">Login</a></li>
                 </ul>
             </nav>
@@ -102,6 +103,8 @@
         </div>
     </footer>
 
+
+    <!-- JavaScript for Login -->
     <script>
         async function login() {
             const username = document.getElementById('username').value;
