--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -41,6 +41,10 @@
                 alert('Login failed! Check your username and password.');
             }
         }
+
+        function redirectActivate() {
+            window.location.href = 'activation.html'; // Redirect to activation page
+        }
     </script>
 </body>
 </html>
